<resources>
    <string name="app_name">网络问政管理</string>

    <!-- Strings related to login -->
    <string name="prompt_person">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_person">此用户名无效</string>
    <string name="error_invalid_password">这个密码太短</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_loginID">用户名不能为空</string>
    <string name="error_field_pwd">密码不能为空</string>


    <string name="sqc_platform_url">http://www.sqee.cn/forum-8-1.html</string>
    <string name="navigation_drawer_open">打开导航抽屉</string>
    <string name="navigation_drawer_close">关闭导航抽屉</string>


    <string name="title_activity_main">问政列表</string>
    <string name="subtitle_activity_new_politics">新建问政</string>
    <string name="title_activity_statistics">统计问政</string>
    <string name="title_activity_sqc_plat_form">宿迁论坛</string>
    <string name="title_activity_app_settings">设置</string>

    <string name="nav_swap_user">切换用户</string>
    <string name="loading">加载中。。。</string>
    <string name="loading_more">加载更多...</string>
    <string name="header_state">下拉刷新</string>

    <!-- 问政列表-->
    <string name="title_activity_count_aty">问政统计</string>
    <string name="title_activity_view_politics_aty">问政处理</string>
    <string name="subtitle_activity_view_politics_aty">查看问政</string>
    <string name="title_activity_edit_politics_aty">问政管理</string>
    <string name="subtitle_activity_edit_politics_aty">编辑问政</string>
    <!-- settings for Notifications -->
    <string name="pref_header_notifications">通知</string>
    <string name="pref_title_new_message_notifications">新消息通知</string>
    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">无声</string>
    <string name="pref_title_vibrate">震动</string>
    <!-- settings for NetWork -->
    <string name="pref_header_network">网络</string>
    <!-- settings for cached -->
    <string name="pref_header_cached">缓存设置</string>
    <!-- settings for about -->
    <string name="pref_header_about">关于</string>

    <!--问政统计表头-->
    <string name="branch">部门</string>
    <string name="total">问政总数</string>
    <string name="state0">未回应</string>
    <string name="state1">已关注</string>
    <string name="s1_in_time0">关注及时</string>
    <string name="s1_in_time1">关注超时</string>
    <string name="state2">已回复</string>
    <string name="s2_in_time0">回复及时</string>
    <string name="s2_in_time1">回复超时</string>

</resources>
